Fix typo in slides

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -123,7 +123,7 @@
         \item
             LSTM = Recurrent Neural Network with memory cells
         \item
-            Motivation:
+            Motivation
             \begin{itemize}
             \item
                 Detect long-range dependencies
