--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -175,4 +175,20 @@
     Thank you for your attention!
 \end{frame}
 
+\begin{frame}{Network architecture}
+    \begin{figure}[H]
+        \begin{center}
+        \includegraphics[height=.7\textheight]{figures/lstm2.png}
+        \end{center}
+    \end{figure}
+\end{frame}
+\begin{frame}{Lab setup (not our lab but similar)}
+    \begin{figure}[H]
+        \begin{center}
+        \includegraphics[height=.7\textheight]{figures/treadmill.png} \\
+        \tiny from \url{http://biodesign.seas.harvard.edu/soft-exosuits}
+        \end{center}
+    \end{figure}
+\end{frame}
+
 \end{document}
