minor update slides

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -178,7 +178,8 @@
 \begin{frame}{Network architecture}
     \begin{figure}[H]
         \begin{center}
-        \includegraphics[height=.7\textheight]{figures/lstm2.png}
+        \includegraphics[height=.7\textheight]{figures/lstm2.png} \\
+        \tiny from \url{http://stackoverflow.com/q/17454402/1163213}
         \end{center}
     \end{figure}
 \end{frame}
