Add table of results

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -132,9 +132,9 @@
         \cmidrule{3-4} \cmidrule{6-7}
         {} && mean & std && mean & std \\
         \midrule
-        Foot velocity   &&   XXXXXXX &   XXXXXXX &&   XXXXXXX &    XXXXXXX \\
-        Feed-forward NN &&   XXXXXXX &   XXXXXXX &&   XXXXXXX &    XXXXXXX \\
-        LSTM            &&   XXXXXXX &   XXXXXXX &&   XXXXXXX &    XXXXXXX \\
+        Foot velocity   &&   4.84 & 3.74	&& 2260.2 &  560.4 \\
+        Feed-forward NN &&   0.85 & 1.48	&&  211.1 &  204.5 \\
+        LSTM            &&   2.35 & 3.87	&&  306.6 &  360.5 \\
         \bottomrule
         \end{tabular}
         \caption
@@ -144,8 +144,8 @@
                 N
                 =
                 30
+                ,
             \)
-            subjects,
             \(
                 T
                 =
