add explanation of ss_metric

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -119,6 +119,11 @@
             \item Problem: Does not converge fast enough out of the box
             \item Tweaks: Learning rate, mini-batch, regularization, etc.
         \end{itemize}
+        \item Evaluation of algorithm performance:
+        \begin{itemize}
+            \item Correctly predicted events: $t_{\mathrm{true}} - t_{\mathrm{pred}}$
+            \item Gross mis-prediction: total time of mispredicted state
+        \end{itemize}
         \item Further work:
         \begin{itemize}
             \item Explore alternative network configurations
